tests/NormalTests/paczka1/fuzzy1/64020088.err
Error in line 4: RTKhky A182 23,6
Error in line 10: aLTC2aS A182 92,2
Error in line 13: aLTC2aS S927 6,0
Error in line 27: S927 A687 68,4
Error in line 24: aLTC2aS A831 59,5
